--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
+    "react-to-print": "^2.15.1",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.1.1",
     "xlsx": "^0.18.5"
